tests/ui/concurrent_cached_expires_ttl_exclusive.stderr
error: `expires` and `ttl` are mutually exclusive — `expires` delegates expiry to the value via the `Expires` trait
 --> tests/ui/concurrent_cached_expires_ttl_exclusive.rs:4:4
  |
4 | fn my_fn(x: u32) -> Result<u32, String> {
  |    ^^^^^
